--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-three/drei": "^10.0.7",
+    "@react-three/fiber": "^9.1.2",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
+    "three": "^0.176.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
